--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -5,15 +5,21 @@ defaults:
   - machine: gpu
   - paths: save
 
-trainer:
-  _target_: pytorch_lightning.Trainer
-  val_check_interval: 1.0
-  devices: ${machine.devices}
-  accelerator: ${machine.accelerator}
-  gradient_clip_val: 1
-  log_every_n_steps: 1000
-  num_nodes: ${machine.num_nodes}
-  precision: ${machine.precision}
+
+args:
+  _target_: transformers.TrainingArguments
+  output_dir: ${paths.save}
+  evaluation_strategy: "epoch"
+  learning_rate: 3e-4
+  per_device_train_batch_size: 1
+  gradient_accumulation_steps: 8
+  num_train_epochs: 1
+  weight_decay: 0.01
+  logging_dir: ${paths.logs}
+  fp16: True
+  report_to: "wandb"                 
+  run_name: "1E_deepseek_7b_4bit_lora8"
+  logging_steps: 5
   
 logger:
   _target_: pytorch_lightning.loggers.WandbLogger
